@@ -23,6 +23,7 @@ Bugfixes:
 - fixed NPE when connecting without application given (Jira APPSERVER-116)
 - fixed various problems with deserialization of AMF3 objects that implement
   IExternalizable (Jira CODECS-2)
+- fixed warning about deprecated Jetty configuration (Jira APPSERVER-115)
 
 
 Red5 0.6    (2007-04-23)
